@@ -5,6 +5,18 @@
         Make HTML5Lexer go fast
         https://bugs.webkit.org/show_bug.cgi?id=40048
 
+        More small steps.  This patch deals with emitting tokens.
+
+        * html/HTML5Lexer.cpp:
+        (WebCore::HTML5Lexer::nextToken):
+
+2010-06-04  Adam Barth  <abarth@webkit.org>
+
+        Reviewed by Eric Seidel.
+
+        Make HTML5Lexer go fast
+        https://bugs.webkit.org/show_bug.cgi?id=40048
+
         The next step: using macros to delimit each state.  Evetually, we're
         going to change what these macros expand to.
 
